--- a/style.css
+++ b/style.css
@@ -1,12 +1,6 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
-}
 
 body{
-    background-image: url(./images/background-img.jpeg);
+    background-image: url(./images/bgimg.jpg);
     background-size: cover;
     font-weight: bold;
     text-align: center;
@@ -16,30 +10,35 @@ body{
 h1{
     margin-top: 10px;
     margin-bottom: 10px;
-    color: whitesmoke;
+    
+    font-size: 50px;
 }
 
 h2{
-    font-size: 50px;
+    font-size: 90px;
     margin-top: 0;
     margin-bottom: 20px;
     color: red;
 }
 
 button{
-    border: none;
+    border: border-box;
     padding-top: 10px;
     padding-bottom: 10px;
     color: whitesmoke;
+    font-size: 20px;
     font-weight: bold;
     width: 200px;
     margin-bottom: 5px;
     border-radius: 5px;
+    box-shadow: 0px 0px 5px #000, 0px 0px 15px #858585;
 }
 button:hover{
     transform: scale(1.2);
     transition: .4s;
 }
+
+
 
 #increment-btn{
     background: darkred;
@@ -47,4 +46,7 @@ button:hover{
 
 #save-btn{
     background: darkgreen;
+}
+#save-el{
+    font-weight: bolder;
 }
