--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+*{
+    margin: 10px;
+    padding: 10px;
+   
+}
+
+.container{
+    box-sizing: border-box;
+    min-width: 450px;
+    border-radius: 10px;
+    
+}
 
 body{
     background-image: url(./images/bgimg.jpg);
@@ -5,12 +17,14 @@ body{
     font-weight: bold;
     text-align: center;
     letter-spacing: 1px;
+    
 }
+
+
 
 h1{
     margin-top: 10px;
     margin-bottom: 10px;
-    
     font-size: 50px;
 }
 
@@ -48,5 +62,21 @@ button:hover{
     background: darkgreen;
 }
 #save-el{
+    margin-top: 5rem;
     font-weight: bolder;
+    font-size: 20px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    background: #ccc;
+}
+
+
+@media screen and (max-width: 768px) {
+    .container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+
 }
