--- a/style.css
+++ b/style.css
@@ -8,7 +8,10 @@
     box-sizing: border-box;
     min-width: 450px;
     border-radius: 10px;
-    
+    background: #858585;
+    max-width: 80%;
+    margin: auto;
+    box-shadow: 0px 0px 5px #000, 0px 0px 15px #858585;
 }
 
 body{
@@ -17,7 +20,7 @@ body{
     font-weight: bold;
     text-align: center;
     letter-spacing: 1px;
-    
+    height: 100vh;
 }
 
 
@@ -76,6 +79,7 @@ button:hover{
         display: flex;
         flex-direction: column;
         align-items: center;
+        height: 100vh;
     }
     
 
