--- a/style.css
+++ b/style.css
@@ -1,10 +1,21 @@
+
 *{
     margin: 10px;
-    padding: 10px;
-   
+    padding: 10px;  
 }
 
-.container{
+body{
+    background-image: url(./images/bgimg.jpg);
+    background-size: cover;
+    font-family: 'Roboto', sans-serif;
+    padding: 20px;
+    font-weight: bold;
+    text-align: center;
+    letter-spacing: 1px;
+    height: 100vh;
+}
+
+.counter{
     box-sizing: border-box;
     min-width: 450px;
     border-radius: 10px;
@@ -12,33 +23,28 @@
     max-width: 80%;
     margin: auto;
     box-shadow: 0px 0px 5px #000, 0px 0px 15px #858585;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-
-body{
-    background-image: url(./images/bgimg.jpg);
-    background-size: cover;
-    font-weight: bold;
-    text-align: center;
-    letter-spacing: 1px;
-    height: 100vh;
-}
-
-
 
 h1{
     margin-top: 10px;
     margin-bottom: 10px;
-    font-size: 50px;
-}
+    font-size: 50px;           
+ }
 
-h2{
-    font-size: 90px;
-    margin-top: 0;
-    margin-bottom: 20px;
-    color: red;
+
+ #value{
+     color: lightblue;
+     font-weight: 700;
+     font-size: 4rem;
 }
 
 button{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     border: border-box;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -49,38 +55,51 @@ button{
     margin-bottom: 5px;
     border-radius: 5px;
     box-shadow: 0px 0px 5px #000, 0px 0px 15px #858585;
-}
-button:hover{
+    }
+
+    #minus{
+        background: red;
+    }
+    #add{
+        background: green;
+    }
+    #reset{
+        background: lightblue;  
+    }
+    #save-btn{
+        background: blue;
+    }
+    #save-el{
+        margin-top: 5rem;
+        font-weight: bolder;
+        font-size: 20px;
+        box-sizing: border-box;
+        border-radius: 10px;
+        background: #ccc;
+        text-align: center;
+    }
+                
+    button:hover{
     transform: scale(1.2);
     transition: .4s;
 }
 
 
-
-#increment-btn{
-    background: darkred;
-}
-
-#save-btn{
-    background: darkgreen;
-}
-#save-el{
-    margin-top: 5rem;
-    font-weight: bolder;
-    font-size: 20px;
-    box-sizing: border-box;
-    border-radius: 10px;
-    background: #ccc;
-}
-
-
-@media screen and (max-width: 768px) {
-    .container{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        height: 100vh;
+@media (max-width: 350px){
+    .counter{
+        font-size: 2rem;
     }
     
+    h1{
+        font-size: 2rem;
+    }
 
+    #value{
+        font-size: 3rem;
+    }
+
+    button{
+            font-size: 0.7rem;
+            margin: 0.5em;
+}
 }
